# matrix-e2ee-bridge

./: .gitignore  README.md  pyproject.toml
src/matrix_bridge/: bot.py  bot_cli.py  cli.py  client.py  config.py  server.py  trust.py
